--- a/4. Backend - Spring Boot/Twitter/twitter/src/main/resources/application.properties
+++ b/4. Backend - Spring Boot/Twitter/twitter/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8885
-debug=true
+debug=false
 spring.data.mongodb.uri=mongodb://localhost:27017/TwitterDB
 spring.data.mongodb.database=TwitterDB
