--- a/4. Backend - Spring Boot/Twitter/twitter/pom.xml
+++ b/4. Backend - Spring Boot/Twitter/twitter/pom.xml
@@ -61,10 +61,10 @@
 		</dependency>
 
 		<!--Security-->
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>-->
+		</dependency>
 
 		<!--Test-->
 		<dependency>
